Removed the extraneous features

--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
   </head>
 
   <body>
-    <h2 class="viz-title center" id="main_title_h2">Alternative Fuel Station Construction in the U.S.</h2>
-    <div style="float: left">
-      <div id="stations-over-time-viz"></div>
-      <br/>
-      <h3 id="year-label" class="center">2020 - 2021</h3>
-      <br/>
-    </div>
-    
-    <div style="float: right">
-      <input type="checkbox" name="type" id="accum" value="accumulating" onclick={accumulation_check()}> <span id="accumulating">Accumulating to 2021</span>
-      <input type="checkbox" name="type" id="showing_usa_data" value="showing_usa_data" onclick={usa_data_check()} checked> Showing Entire USA
+<!--    <h2 class="viz-title center" id="main_title_h2">Alternative Fuel Station Construction in the U.S.</h2>-->
+<!--    <div style="float: left">-->
+<!--      <div id="stations-over-time-viz"></div>-->
+<!--      <br/>-->
+<!--      <h3 id="year-label" class="center">2020 - 2021</h3>-->
+<!--      <br/>-->
+<!--    </div>-->
+<!--    -->
+<!--    <div style="float: right">-->
+<!--      <input type="checkbox" name="type" id="accum" value="accumulating" onclick={accumulation_check()}> <span id="accumulating">Accumulating to 2021</span>-->
+<!--      <input type="checkbox" name="type" id="showing_usa_data" value="showing_usa_data" onclick={usa_data_check()} checked> Showing Entire USA-->
 
-      <div id="bar-chart"></div>
-    </div>
+<!--      <div id="bar-chart"></div>-->
+<!--    </div>-->
 
-    <div style="position:absolute; top: 700px;" id="division">
+<!--    <div style="position:absolute; top: 700px;" id="division">-->
 
-      <h3 id="construction_h3">Yearly construction for the U.S.</h3>
-      <div id="time-control-slider">
-      </div>
-      <h3 id="policy_h3">New Policy for the U.S.</h3>
-      <div id="law_linear_graph"></div>
-      <br/>
-      <h1>With OpenLayers</h1>
+<!--      <h3 id="construction_h3">Yearly construction for the U.S.</h3>-->
+<!--      <div id="time-control-slider">-->
+<!--      </div>-->
+<!--      <h3 id="policy_h3">New Policy for the U.S.</h3>-->
+<!--      <div id="law_linear_graph"></div>-->
+<!--      <br/>-->
+<!--      <h1>With OpenLayers</h1>-->
       <label for="vis_metric">Choose a Visualization Metric:</label>
       <select name="vis_metric" id="vis_metric">
         <option value="hours">Popularity (Hours)</option>
