Removed nostation error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
 <!--    <h2 class="viz-title center" id="main_title_h2">Alternative Fuel Station Construction in the U.S.</h2>-->
 <!--    <div style="float: left">-->
-<!--      <div id="stations-over-time-viz"></div>-->
+      <div id="stations-over-time-viz"></div>
 <!--      <br/>-->
 <!--      <h3 id="year-label" class="center">2020 - 2021</h3>-->
 <!--      <br/>-->
