Policy Change HTML

--- a/index_base.html
+++ b/index_base.html
@@ -1,5 +1,6 @@
 <!-- DOCTYPE html -->
 <!DOCTYPE html>
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 <html lang="en">
 
 <head>
