--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!-- DOCTYPE html -->
 <!DOCTYPE html>
 <html lang="en">
-
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 <head>
   <title id="main_title">Alternative Fuel Stations in the U.S.</title>
   <link rel="stylesheet" href="styles.css">
