The latest version of smart transportation website, as of 17th April

--- a/index1.html
+++ b/index1.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+<meta charset="utf-8">
 <head>
   <title id="main_title">Alternative Fuel Stations in the U.S.</title>
   <link rel="stylesheet" href="styles.css">
