--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+<meta charset="utf-8">
 <html>
 <head>
     <title>AspireVis</title>
