--- a/index.html
+++ b/index.html
@@ -1,14 +1,176 @@
+<!-- DOCTYPE html -->
 <!DOCTYPE html>
+<html lang="en">
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 <meta charset="utf-8">
-<html>
-<head>
-    <title>AspireVis</title>
-</head>
-<body>
-<iframe id="iframe_base" src="index_base.html" width="870" height="450"></iframe>
-<iframe id="iframe1" src="index1.html" width="870" height="450"></iframe>
-<iframe id="iframe2" src="index1.html" width="870" height="450"></iframe>
-<iframe id="iframe3" src="index1.html" width="870" height="450"></iframe>
-</body>
+  <head>
+    <title id="main_title">Alternative Fuel Stations in the U.S.</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="v6.1.1-dist/ol.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/topojson.v3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="v6.1.1-dist/ol.js"></script>
+  </head>
+
+  <body>
+<!--    <h2 class="viz-title center" id="main_title_h2">Alternative Fuel Station Construction in the U.S.</h2>-->
+<!--    <div style="float: left">-->
+      <div id="stations-over-time-viz" style="visibility: hidden; height: 0;width: 0"></div>
+<!--      <br/>-->
+<!--      <h3 id="year-label" class="center">2020 - 2021</h3>-->
+<!--      <br/>-->
+<!--    </div>-->
+    
+<!--    <div style="float: right">-->
+<!--&lt;!&ndash;      <input type="checkbox" name="type" id="accum" value="accumulating" onclick={accumulation_check()}> <span id="accumulating">Accumulating to 2021</span>&ndash;&gt;-->
+<!--&lt;!&ndash;      <input type="checkbox" name="type" id="showing_usa_data" value="showing_usa_data" onclick={usa_data_check()} checked> Showing Entire USA&ndash;&gt;-->
+
+<!--&lt;!&ndash;      <div id="bar-chart"></div>&ndash;&gt;-->
+<!--    </div>-->
+
+<!--    <div style="position:absolute; top: 700px;" id="division">-->
+
+<!--      <h3 id="construction_h3">Yearly construction for the U.S.</h3>-->
+<!--      <div id="time-control-slider">-->
+<!--      </div>-->
+<!--      <h3 id="policy_h3">New Policy for the U.S.</h3>-->
+<!--      <div id="law_linear_graph"></div>-->
+<!--      <br/>-->
+      <label for="vis_metric">Choose a Visualization Metric:</label>
+      <select name="vis_metric" id="vis_metric">
+        <option value="hours">Popularity (Hours)</option>
+        <option value="visits">Visits (Day)</option>
+      </select>
+<!--      <input type="submit" value="Submit" onclick="drawStations()">-->
+      <br>
+      <text>Selected Place Name:   </text>
+      <text id="Place_id">N/A</text>
+<!--      <text>Metric Value:   </text>-->
+<!--      <text id="metric_value">N/A</text>-->
+      <br/>
+      <div style="float:left">
+        <label for="poi_hour">Time for Visualization:</label>
+        <input type="range" id="poi_hour" name="poi_hour" min="1" max="24" onchange="drawStations();setText(this.value);">
+        <text id="hour_vis">10:00</text>
+      </div>
+      <div style="float:left; visibility: hidden" class="loader" id="loader"></div>
+      <br/>
+      <br/>
+<!--      <div style="float:left">-->
+<!--      <div class="center">-->
+<!--        <input type="checkbox" class ="fuel_type" id="cng" name="cng" value="cng">-->
+<!--        <label id="cng_label" class="checkbox-label" for="cng">CNG</label>-->
+<!--        <input type="checkbox" class ="fuel_type" id="lng" name="lng" value="lng">-->
+<!--        <label id="lng_label" class="checkbox-label" for="lng">LNG</label>-->
+<!--        <input type="checkbox" class ="fuel_type" id="lpg" name="lpg" value="lpg">-->
+<!--        <label id="lpg_label" class="checkbox-label" for="lpg">LPG</label>-->
+<!--        <input type="checkbox" class ="fuel_type" id="e85" name="e85" value="e85">-->
+<!--        <label id="e85_label" class="checkbox-label" for="e85">E85</label>-->
+<!--        <input type="checkbox" class ="fuel_type" id="bd" name="bd" value="bd">-->
+<!--        <label id="bd_label" class="checkbox-label" for="bd">Biodiesel</label>-->
+<!--        <input type="checkbox" class ="fuel_type" id="elec" name="elec" value="elec">-->
+<!--        <label id="elec_label" class="checkbox-label" for="elec">Electricity</label>-->
+<!--        <input type="checkbox" class ="fuel_type" id="hy" name="hy" value="hy">-->
+<!--        <label id="hy_label" class="checkbox-label" for="hy">Hydrogen</label>-->
+<!--        <button type="button" id="USA_button" onclick="init()">Entire USA</button>-->
+<!--      </div>-->
+<!--      </div>-->
+      <div class="popup" id="popup">
+        <span class="popuptext" id="myPopup">Place Name would be shown here:</span>
+      </div>
+<div style="float:right; padding: 50px">
+        <input type="text" id="station_input" name="station" placeholder="Enter The Station name">
+        <br>
+        <input type="text" id="charge_input" name="charge" placeholder="Enter The Charge/Availability">
+        <br>
+        <input type="text" id="lat_input" name="latitude" placeholder="Enter The Latitude">
+        <br>
+        <input type="text" id="lon_input" name="latitude" placeholder="Enter The Longitude">
+        <br>
+    <input type="checkbox" id="station_on_click" value='YES'>
+    <label id="station_OC" class="checkbox-metric" >Get coordinates from last click?</label>
+    <br>
+        <input type="submit" value="Add Station" onclick="addStation()">
+    <input type="submit" value="Fetch API chargers" onclick="showChargers()">
+    <input type="submit" value="Show/Hide Chargers" onclick="toggleElec()">
+    </div>
+      <div style="float:right">
+        <h3>Metric to show</h3>
+        <input type="checkbox" id="population" name="metric" value="population" onclick="drawStations()">
+          <label id="population_label" class="checkbox-metric" for="cng">Population</label>
+<!--        <br>-->
+<!--          <input type="radio" id="race" name="metric" value="race">-->
+<!--          <label id="race_label" class="checkbox-label-metric" for="lng">Race</label>-->
+        <br>
+          <input type="checkbox" id="age" name="metric" value="over64pct" onclick="drawStations()">
+          <label id="over64pct_label" class="checkbox-metric" for="lpg">People Over 64</label>
+<!--        <br>-->
+<!--          <input type="radio" id="sex" name="metric" value="sex">-->
+<!--          <label id="sex_label" class="checkbox-label-metric" for="e85">Sex</label>-->
+        <br>
+          <input type="checkbox" id="poverty" name="metric" value="lowincfpct" onclick="drawStations()">
+          <label id="lowincfpct_label" class="checkbox-metric" for="bd">Population below 200% of poverty level</label>
+        <br>
+        <input type="checkbox" id="pollution" name="metric" value="pm25" onclick="drawStations()">
+        <label id="pm25_label" class="checkbox-metric" for="bd">Pollution(PM 2.5 Concentration)</label>
+        <br>
+          <input type="checkbox" id="cancer" name="metric" value="cancer" onclick="drawStations()">
+          <label id="cancer_label" class="checkbox-metric" for="elec">Cancer Risk(Crk)</label>
+        <br>
+          <input type="checkbox" id="food" name="metric" value="foodsrtpct" onclick="drawStations()">
+          <label id="foodsrtpct_label" class="checkbox-metric" for="hy">Food Desert(Fdt)</label>
+        <br>
+        <input type="checkbox" id="unemployment" name="metric" value="unemppct" onclick="drawStations()">
+        <label id="unemppct_label" class="checkbox-metric" for="hy">Unemployment Percentage(Upc)</label>
+        <br>
+<!--        <input type="radio" id="income" name="metric" value="lowincfpct" onclick="drawStations()">-->
+<!--        <label id="income_label" class="checkbox-label-metric" for="hy">Income</label>-->
+<!--        <br>-->
+        <input type="checkbox" id="homeless" name="metric" value="homelespct" onclick="drawStations()">
+        <label id="homelespct_label" class="checkbox-metric" for="hy">Homeless Percentage(Hlp)</label>
+        <br>
+        <input type="checkbox" id="housing" name="metric" value="housebrdn" onclick="drawStations()">
+        <label id="housebrdn_label" class="checkbox-metric" for="hy">Housing Cost(Hoc)</label>
+        <br>
+      </div>
+      <div id="js-map" class="map" style="z-index: -1">
+      </div>
+      <div class="popup" id="popup_barchart" style="background: white;border: 2px solid black">
+        <canvas style="width: 150px; height: 75px; fill: white; z-index: 1;" id="barChart"></canvas>
+      </div>
+      </div>
+    <div class="overlay-container">
+    </div>
+<!--    <br/>-->
+<!--    <br/>-->
+<!--    <br/>-->
+<!--    <br/>-->
+<!--    <br/>-->
+<!--    <hr />-->
+<!--    <br/>-->
+<!--    <br/>-->
+<!--    <h2 class="viz-title center">Laws and Incentives Regarding Alternative Fuels Over the Years</h2>-->
+<!--    <div class="center">-->
+<!--      <h3 style="display: inline;background: #1f77b4;color: white">CNG</h3>-->
+<!--      <h3 style="display: inline;background: #2ca02c;color: white">LPG</h3>-->
+<!--      <h3 style="display: inline;background: #d62728;color: white">E85</h3>-->
+<!--      <h3 style="display: inline;background: #9467bd;color: white">Biodiesel</h3>-->
+<!--      <h3 style="display: inline;background: #8c564b;color: white">Electric</h3>-->
+<!--      <h3 style="display: inline;background: #e377c2;color: white">Hydrogen</h3>-->
+<!--    </div>-->
+<!--    <div id="laws-viz"></div>-->
+
+    <script src="geoDataProcessing.js"></script>
+    <script src="viz.js"></script>
+    <script src="time-control-slider.js"></script>
+    <script src="bar_chart.js"></script>
+    <script src="pop_up_display.js"></script>
+<!--    <script src="laws.js"></script>-->
+  </body>
 </html>
