--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <label for="poi_hour">Time for Visualization:</label>
         <input type="range" id="poi_hour" name="poi_hour" min="1" max="24" onchange="drawStations();setText(this.value);">
         <text id="hour_vis">10:00</text>
-    <button id="pan" class="btn btn-outline-primary" onclick="toggleVis()">
+    <button id="pan" class="btn btn-outline-primary pressed" onclick="toggleVis()">
         <img style="width:20px;height:20px;" src="https://www.kindpng.com/picc/m/249-2495351_move-direction-arrow-panning-icon-hd-png-download.png" alt="Move Direction Arrow - Panning Icon, HD Png Download@kindpng.com">
     </button>
     <button id="station" class="btn btn-outline-primary" onclick="toggleSt()">
@@ -115,9 +115,11 @@
         <option value="polar">Polar Chart</option>
     </select>
 </div>
-<div class="popup" id="popup_metric" style="display:none;background: white;opacity:1;border: 2px solid black;float:right;z-index: 1">
+<div class="popup" id="popup_metric" style="background: white;opacity:1;border: 2px solid black;float:right;z-index: 1">
     <h3>Metric to show</h3>
-    <canvas id="legend_canvas" style="width: 150px; height: 150px"></canvas>
+    <div style="display: flex; justify-content: center; align-items: center;">
+    <canvas id="legend_canvas" style="display:none;width: 270px; height: 270px"></canvas>
+    </div>
     <ul id="checkbox-list" style="z-index: 100000">
         <li class="list-metric"><input type="checkbox" id="population" value="population" onclick="drawStations()">
             <label id="population_label" class="checkbox-metric" for="cng">Population</label></li>
@@ -179,7 +181,13 @@
 <div class="popup" id="popup_add_st" style="background: white;opacity:1;border: 2px solid black;float:right;z-index: 1;display: none">
     <input type="text" id="station_input" name="station" placeholder="Enter The Station name">
     <br>
-    <input type="text" id="charge_input" name="charge" placeholder="Enter The Charge/Availability">
+    <label for="charge_input">Choose the Status:</label>
+    <select name="vis_metric" id="charge_input">
+        <option value=90>Available</option>
+        <option value=0>Unavailable</option>
+        <option value=60>Charging</option>
+        <option value=30>Preparing</option>
+    </select>
     <br>
     <input type="text" id="lat_input" name="latitude" placeholder="Enter The Latitude">
     <br>
