Updated with the latest vis from 15th June fixed the delete button and etc

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <div class="popup" id="popup_metric" style="background: white;opacity:1;border: 2px solid black;float:right;z-index: 1">
     <h3>Metric to show</h3>
     <div style="display: flex; justify-content: center; align-items: center;">
-    <canvas id="legend_canvas" style="display:none;width: 270px; height: 270px"></canvas>
+    <canvas id="legend_canvas" style="font-size:25px; display:none;width: 270px; height: 270px"></canvas>
     </div>
     <ul id="checkbox-list" style="z-index: 100000">
         <li class="list-metric"><input type="checkbox" id="population" value="population" onclick="drawStations()">
