--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <head>
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+      <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v6.6.1/css/ol.css">
+      <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v6.6.1/build/ol.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+
+      <!-- olgm library -->
+      <script src="https://cdn.jsdelivr.net/npm/ol3-google-maps/dist/olgm.min.js"></script>
       <!--      <script type="module">-->
 <!--          import { toggleElec } from './viz.js';-->
 <!--          import { toggleApi } from './viz.js';-->
@@ -37,7 +43,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
-
+      <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v6.5.0/css/ol.css" type="text/css">
+      <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+      <script src="https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.14.0/maps/maps-web.min.js"></script>
+      <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v6.5.0/css/ol.css" type="text/css">
+      <script type="text/javascript" src="https://www.nextzen.org/tangram/0.15/tangram.min.js"></script>
+      <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
@@ -56,7 +67,7 @@
 <!--      <h3 id="year-label" class="center">2020 - 2021</h3>-->
 <!--      <br/>-->
 <!--    </div>-->
-    
+
 <!--    <div style="float: right">-->
 <!--&lt;!&ndash;      <input type="checkbox" name="type" id="accum" value="accumulating" onclick={accumulation_check()}> <span id="accumulating">Accumulating to 2021</span>&ndash;&gt;-->
 <!--&lt;!&ndash;      <input type="checkbox" name="type" id="showing_usa_data" value="showing_usa_data" onclick={usa_data_check()} checked> Showing Entire USA&ndash;&gt;-->
@@ -79,8 +90,7 @@
         <option value="hours">Popularity (Hours)</option>
         <option value="visits">Visits (Day)</option>
       </select>
-
-<!--      <input type="submit" value="Submit" onclick="drawStations()">-->
+    <!--      <input type="submit" value="Submit" onclick="drawStations()">-->
 <!--      <br>-->
 <!--      <text>Selected Place Name:   </text>-->
 <!--      <text id="Place_id">N/A</text>-->
@@ -196,6 +206,11 @@
         <option value=30>Preparing</option>
     </select>
     <br>
+    <label for="super_charger">SuperCharger</label>
+    <input type="radio" id="super_charger" name="ch_type" value="SuperCharger">
+    <label for="normal_type">NormalCharger</label>
+    <input type="radio" id="normal_type" name="ch_type" value="NormalCharger">
+    <br>
     <input type="text" id="lat_input" name="latitude" placeholder="Enter The Latitude">
     <br>
     <input type="text" id="lon_input" name="latitude" placeholder="Enter The Longitude">
@@ -309,7 +324,8 @@
 <!--      <h3 style="display: inline;background: #e377c2;color: white">Hydrogen</h3>-->
 <!--    </div>-->
 <!--    <div id="laws-viz"></div>-->
-
+<script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+<script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
     <script src="geoDataProcessing.js"></script>
     <script src="viz.js"></script>
 <!--    <script src="time-control-slider.js"></script>-->
